# media-srv-rust

./: .gitignore  Cargo.toml  LICENSE  README.md  Rocket.toml  build.rs  mount.toml
client-src/: package-lock.json  package.json
src/: config.rs  dir.rs  main.rs  ranged_file.rs  to_url.rs
templates/: dir.hbs  watch.hbs
