[package]
name = "media"
version = "0.1.0"
authors = ["Michael Eckert <mi.eckert@gmx.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
serde = { version = "1.0.114", features = ["derive"] }
toml = "0.5.7"
percent-encoding = "2.1.0"

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["serve", "handlebars_templates"]